Closed Bug 1094035 Opened 10 years ago Closed 10 years ago

Keyed Histograms do not reflect key strings to JS correctly

Categories

(Toolkit :: Telemetry, defect)

34 Branch
defect
Not set
minor

Tracking

()

RESOLVED FIXED
mozilla36
Tracking Status
firefox33 --- unaffected
firefox34 --- fixed
firefox35 --- fixed
firefox36 --- fixed

People

(Reporter: yfdyh000, Assigned: gfritzsche)

References

Details

Attachments

(2 files)

Attached image issue screenshot
Make a search in search bar using a non-ASSIC characters search name.
Open about:telemetry, click the Keyed Histograms to expand.
See a confusion of names in SEARCH_COUNTS.
Summary: Keyed Histograms does not show proper non-ASSIC characters → Keyed Histograms do not reflect key strings to JS correctly
[Tracking Requested - why for this release]:
This affects all "other-*" search engines for the "SEARCH_COUNTS" probe.
"SEARCH_DEFAULT_ENGINE" is also affected.
Assignee: nobody → georg.fritzsche
Comment on attachment 8517519 [details] [diff] [review]
Pass the key string in proper encoding.

Sorry, should have caught that in review...
Attachment #8517519 - Flags: review?(nfroyd) → review+
Comment on attachment 8517519 [details] [diff] [review]
Pass the key string in proper encoding.

Approval Request Comment
[Feature/regressing bug #]: Search telemetry, bug 1069874 et al.
[User impact if declined]: Search engines with non-ASCII strings show up garbled in search telemetry (probably limited to non-partner engines).
[Describe test coverage new/current, TBPL]: Extended automation coverage for this.
[Risks and why]: Low risk - small isolated string encoding issue.
[String/UUID change made/needed]: None.
Attachment #8517519 - Flags: approval-mozilla-beta?
Attachment #8517519 - Flags: approval-mozilla-aurora?
ni?lmandel for heads-up.
Flags: needinfo?(lmandel)
Comment on attachment 8517519 [details] [diff] [review]
Pass the key string in proper encoding.

This looks pretty safe. I would like to get this change into beta7, which goes to build tomorrow. I'm going to approve this for beta before it lands on m-c. If something breaks on m-c, we will need to back this out tomorrow before we go to build.
Flags: needinfo?(lmandel)
Attachment #8517519 - Flags: approval-mozilla-beta?
Attachment #8517519 - Flags: approval-mozilla-beta+
Attachment #8517519 - Flags: approval-mozilla-aurora?
Attachment #8517519 - Flags: approval-mozilla-aurora+
https://hg.mozilla.org/mozilla-central/rev/01b6e1b347ed
Status: ASSIGNED → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla36
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: