Bug 1094035 - Keyed Histograms do not reflect key strings to JS correctly. r=froydnj, a=lmandel